saving sales whith user and product id
