# storage/api-docs/api-docs.json
@@ -57,16 +57,16 @@
                         "multipart/form-data": {
                             "schema": {
                                 "required": [
-                                    "client_id",
-                                    "product_id",
+                                    "tb_client_id",
+                                    "tb_product_id",
                                     "price",
                                     "quantity"
                                 ],
                                 "properties": {
-                                    "client_id": {
+                                    "tb_client_id": {
                                         "type": "integer"
                                     },
-                                    "product_id": {
+                                    "tb_product_id": {
                                         "type": "integer"
                                     },
                                     "price": {
@@ -91,8 +91,8 @@
                             "application/json": {
                                 "schema": {},
                                 "example": {
-                                    "client_id": 1,
-                                    "product_id": 2,
+                                    "tb_client_id": 1,
+                                    "tb_product_id": 2,
                                     "price": 8.5,
                                     "quantity": 10
                                 }
